force-app/main/default/objects/Metro2_File__c/Metro2_File__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Metro2 File</label>
</CustomObject>