force-app/main/default/objects/Metro2_File__c/fields/Account_Status_Close__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Close__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Status Close</label>
    <length>100</length>
    <type>Text</type>
</CustomField>