force-app/main/default/objects/Metro2_File__c/fields/Account_Status_Close_List__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Close_List__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Status Close List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>