force-app/main/default/objects/Metro2_File__c/fields/Account_Status_Open_Unpaid__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Open_Unpaid__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Status Open Unpaid</label>
    <length>2</length>
    <type>Text</type>
</CustomField>