force-app/main/default/objects/Metro2_File__c/fields/Agency_Included__c.field-meta.xml
<CustomField>
    <fullName>Agency_Included__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency Included</label>
    <length>50</length>
    <type>Text</type>
</CustomField>