force-app/main/default/objects/Metro2_File__c/fields/bureauIdentifier__c.field-meta.xml
<CustomField>
    <fullName>bureauIdentifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>bureauIdentifier</label>
    <length>7</length>
    <type>Text</type>
</CustomField>