force-app/main/default/objects/Metro2_File__c/fields/CA__c.field-meta.xml
<CustomField>
    <fullName>CA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CA</label>
    <length>2</length>
    <type>Text</type>
</CustomField>