force-app/main/default/objects/Metro2_File__c/fields/Canaccede_Financial_Group__c.field-meta.xml
<CustomField>
    <fullName>Canaccede_Financial_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Canaccede Financial Group</label>
    <length>39</length>
    <type>Text</type>
</CustomField>