force-app/main/default/objects/Metro2_File__c/fields/Do_Not_Increase_Count__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Increase_Count__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Increase Count</label>
    <type>Checkbox</type>
</CustomField>