force-app/main/default/objects/Metro2_File__c/fields/HeaderCheck__c.field-meta.xml
<CustomField>
    <fullName>HeaderCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HeaderCheck</label>
    <type>Checkbox</type>
</CustomField>