force-app/main/default/objects/Metro2_File__c/fields/MaxRowsCountTrailer__c.field-meta.xml
<CustomField>
    <fullName>MaxRowsCountTrailer__c</fullName>
    <label>MaxRowsCountTrailer</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>