force-app/main/default/objects/Metro2_File__c/fields/Number_of_Days_After_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_After_Reporting__c</fullName>
    <label>Number of Days After Reporting</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>