force-app/main/default/objects/Metro2_File__c/fields/Number_of_Times_To_Report__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Times_To_Report__c</fullName>
    <label>Number of Times To Report</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>