force-app/main/default/objects/Metro2_File__c/fields/Portfolio_Type__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Portfolio Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>