force-app/main/default/objects/Metro2_File__c/fields/Product_Status_Excluded__c.field-meta.xml
<CustomField>
    <fullName>Product_Status_Excluded__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Status Excluded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>