force-app/main/default/objects/Metro2_File__c/fields/Reporter_Address__c.field-meta.xml
<CustomField>
    <fullName>Reporter_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reporter Address</label>
    <length>96</length>
    <type>Text</type>
</CustomField>