force-app/main/default/objects/Metro2_File__c/fields/Reporter_Phone__c.field-meta.xml
<CustomField>
    <fullName>Reporter_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reporter Phone</label>
    <length>10</length>
    <type>Text</type>
</CustomField>