force-app/main/default/objects/Metro2_File__c/fields/Terms_Duration__c.field-meta.xml
<CustomField>
    <fullName>Terms_Duration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Terms Duration</label>
    <length>10</length>
    <type>Text</type>
</CustomField>